Compile and run with Java 9